feat: fix more collectors issues